--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>chapter_001</module>
         <module>chapter_002</module>
         <module>junior_chapter_2</module>
+        <module>junior_chapter_3</module>
     </modules>
 
     <properties>
@@ -38,6 +39,19 @@
             <artifactId>mockito-core</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.11.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.11.1</version>
         </dependency>
     </dependencies>
     <build>
