--- a/junior_chapter_3/pom.xml
+++ b/junior_chapter_3/pom.xml
@@ -11,5 +11,18 @@
 
     <artifactId>junior_chapter_3</artifactId>
 
+   <dependencies>
+        <dependency>
+            <groupId>ru.job4j</groupId>
+            <artifactId>chapter_002</artifactId>
+            <version>3.0</version>
+        </dependency>
+       <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+       <dependency>
+           <groupId>org.postgresql</groupId>
+           <artifactId>postgresql</artifactId>
+           <version>42.2.10</version>
+       </dependency>
+   </dependencies>
 
 </project>
