--- a/junior_chapter_3/pom.xml
+++ b/junior_chapter_3/pom.xml
@@ -23,6 +23,30 @@
            <artifactId>postgresql</artifactId>
            <version>42.2.10</version>
        </dependency>
+       <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+       <dependency>
+           <groupId>org.xerial</groupId>
+           <artifactId>sqlite-jdbc</artifactId>
+           <version>3.21.0.1</version>
+       </dependency>
+       <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
+       <dependency>
+           <groupId>com.sun.xml.bind</groupId>
+           <artifactId>jaxb-impl</artifactId>
+           <version>2.4.0-b180830.0438</version>
+       </dependency>
+       <!-- https://mvnrepository.com/artifact/javax.xml/jaxb-api -->
+       <dependency>
+           <groupId>javax.xml</groupId>
+           <artifactId>jaxb-api</artifactId>
+           <version>2.1</version>
+       </dependency>
+       <dependency>
+           <groupId>com.sun.xml.bind</groupId>
+           <artifactId>jaxb-core</artifactId>
+           <version>2.3.0.1</version>
+       </dependency>
+
    </dependencies>
 
 </project>
