--- a/junior_chapter_3/pom.xml
+++ b/junior_chapter_3/pom.xml
@@ -46,6 +46,18 @@
            <artifactId>jaxb-core</artifactId>
            <version>2.3.0.1</version>
        </dependency>
+       <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+       <dependency>
+           <groupId>org.jsoup</groupId>
+           <artifactId>jsoup</artifactId>
+           <version>1.12.2</version>
+       </dependency>
+       <!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
+       <dependency>
+           <groupId>org.quartz-scheduler</groupId>
+           <artifactId>quartz</artifactId>
+           <version>2.3.2</version>
+       </dependency>
 
    </dependencies>
 
