--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>chapter_001</module>
         <module>chapter_002</module>
         <module>junior_chapter_3</module>
+        <module>junior_chapter_4</module>
         <!--module>junior_chapter_2</module-->
     </modules>
 
