--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>chapter_002</module>
         <module>junior_chapter_3</module>
         <module>junior_chapter_4</module>
+        <module>middle_chapter_1</module>
         <!--module>junior_chapter_2</module-->
     </modules>
 
